--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "pyboat",
-  "version": "1.8.16",
-  "description": "yes",
+  "name": "NotSoBot",
+  "version": "0.0.1",
+  "description": "yea",
   "scripts": {
-    "typings": "typings install && npm run i18ntypings",
-    "build": "npm run typings && npm run updateglobalversion && rollup -c rollup.config.js",
+    "typings": "typings install",
+    "build": "npm run typings && rollup -c rollup.config.js",
     "publish": "node cd/publish.js",
     "lint": "eslint src/ --ext .ts --max-warnings 99999 --config .eslintrc",
     "lintfix": "eslint src/ --ext .ts --fix --config .eslintrc --quiet",
-    "test": "npm run i18ntypings && rollup -c rollup_test.config.js && npm run publish",
-    "testlint": "npm run i18ntypings && npm run lintfix && npm run updateglobalversion && rollup -c rollup_test.config.js && npm run publish",
-    "i18ntypings": "node cd/i18n_typings.js",
-    "updateglobalversion": "node cd/globalversion.js",
-    "generatei18ndefault": "npm run i18ntypings && node cd/defaulti18n.js",
+    "test": "rollup -c rollup_test.config.js && npm run publish",
+    "testlint": "npm run lintfix && rollup -c rollup_test.config.js && npm run publish",
     "public": "rollup -c rollup_public.config.js"
   },
-  "author": "weebsquad",
+  "author": "rqft",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
