--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@types/node": "^16.7.8",
     "babel-eslint": "^10.1.0",
+    "detritus-client": "^0.16.2",
+    "detritus-pagination": "^1.4.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.1.0",
