--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^3.8.0",
     "cloc": "^2.8.0",
+    "crypto": "^1.0.1",
     "install": "^0.13.0",
     "js-yaml": "^4.0.0",
     "npm": "^7.5.6",
