--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NotSoPylon",
+  "name": "notsopylon",
   "version": "1.0.3",
   "description": "yea",
   "scripts": {
@@ -20,6 +20,8 @@
     "@rollup/plugin-strip": "^2.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@types/node": "^16.7.8",
+    "@types/node-fetch": "^2.5.0",
+    "@types/ws": "^8.2.0",
     "babel-eslint": "^10.1.0",
     "detritus-client": "^0.16.2",
     "detritus-pagination": "^1.4.0",
@@ -28,14 +30,15 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "json-ts": "^1.6.4",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^2.6.0",
+    "pariah": "^1.3.0",
     "rollup": "^2.52.0",
     "rollup-plugin-ignore": "^1.0.6",
     "rollup-plugin-terser": "^7.0.0",
     "typescript": "^4.0.5",
     "typescript-tools": "^0.3.1",
     "typings": "^2.1.1",
-    "ws": "^8.0.0"
+    "ws": "^8.2.3"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.0.0",
